dummer erster Endpunkt zum Benutzer anlegen
