# backend/src/main/resources/openapi-spec.yaml
@@ -2,17 +2,10 @@ swagger: "2.0"
 info:
   description: "This is a sample server Petstore server.  You can find out more about     Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).      For this sample, you can use the api key `special-key` to test the authorization     filters."
   version: "1.0.0"
-  title: "Swagger Petstore"
+  title: "Ideeninitiative"
 basePath: "/v2"
 tags:
-  - name: "pet"
-    description: "Everything about your Pets"
-    externalDocs:
-      description: "Find out more"
-      url: "http://swagger.io"
-  - name: "store"
-    description: "Access to Petstore orders"
-  - name: "user"
+  - name: "benutzer"
     description: "Operations about user"
     externalDocs:
       description: "Find out more about our store"
@@ -21,407 +14,50 @@ schemes:
   - "https"
   - "http"
 paths:
-  /pet:
+  /benutzer:
     post:
       tags:
-        - "pet"
-      summary: "Add a new pet to the store"
-      description: ""
-      operationId: "addPet"
-      consumes:
-        - "application/json"
-        - "application/xml"
-      produces:
-        - "application/xml"
-        - "application/json"
-      parameters:
-        - in: "body"
-          name: "body"
-          description: "Pet object that needs to be added to the store"
-          required: true
-          schema:
-            $ref: "#/definitions/Pet"
-      responses:
-        405:
-          description: "Invalid input"
-    put:
-      tags:
-        - "pet"
-      summary: "Update an existing pet"
-      description: ""
-      operationId: "updatePet"
-      consumes:
-        - "application/json"
-        - "application/xml"
-      produces:
-        - "application/xml"
-        - "application/json"
-      parameters:
-        - in: "body"
-          name: "body"
-          description: "Pet object that needs to be added to the store"
-          required: true
-          schema:
-            $ref: "#/definitions/Pet"
-      responses:
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "Pet not found"
-        405:
-          description: "Validation exception"
-  /pet/findByStatus:
-    get:
-      tags:
-        - "pet"
-      summary: "Finds Pets by status"
-      description: "Multiple status values can be provided with comma separated strings"
-      operationId: "findPetsByStatus"
-      produces:
-        - "application/xml"
-        - "application/json"
-      parameters:
-        - name: "status"
-          in: "query"
-          description: "Status values that need to be considered for filter"
-          required: true
-          type: "array"
-          items:
-            type: "string"
-            enum:
-              - "available"
-              - "pending"
-              - "sold"
-            default: "available"
-          collectionFormat: "multi"
-      responses:
-        200:
-          description: "successful operation"
-          schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/Pet"
-        400:
-          description: "Invalid status value"
-  /pet/findByTags:
-    get:
-      tags:
-        - "pet"
-      summary: "Finds Pets by tags"
-      description: "Muliple tags can be provided with comma separated strings. Use         tag1, tag2, tag3 for testing."
-      operationId: "findPetsByTags"
-      produces:
-        - "application/xml"
-        - "application/json"
-      parameters:
-        - name: "tags"
-          in: "query"
-          description: "Tags to filter by"
-          required: true
-          type: "array"
-          items:
-            type: "string"
-          collectionFormat: "multi"
-      responses:
-        200:
-          description: "successful operation"
-          schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/Pet"
-        400:
-          description: "Invalid tag value"
-  /pet/{petId}:
-    get:
-      tags:
-        - "pet"
-      summary: "Find pet by ID"
-      description: "Returns a single pet"
-      operationId: "getPetById"
-      produces:
-        - "application/xml"
-        - "application/json"
-      parameters:
-        - name: "petId"
-          in: "path"
-          description: "ID of pet to return"
-          required: true
-          type: "integer"
-          format: "int64"
-      responses:
-        200:
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/Pet"
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "Pet not found"
-    post:
-      tags:
-        - "pet"
-      summary: "Updates a pet in the store with form data"
-      description: ""
-      operationId: "updatePetWithForm"
-      consumes:
-        - "application/x-www-form-urlencoded"
-      produces:
-        - "application/xml"
-        - "application/json"
-      parameters:
-        - name: "petId"
-          in: "path"
-          description: "ID of pet that needs to be updated"
-          required: true
-          type: "integer"
-          format: "int64"
-        - name: "name"
-          in: "formData"
-          description: "Updated name of the pet"
-          required: false
-          type: "string"
-        - name: "status"
-          in: "formData"
-          description: "Updated status of the pet"
-          required: false
-          type: "string"
-      responses:
-        405:
-          description: "Invalid input"
-    delete:
-      tags:
-        - "pet"
-      summary: "Deletes a pet"
-      description: ""
-      operationId: "deletePet"
-      produces:
-        - "application/xml"
-        - "application/json"
-      parameters:
-        - name: "petId"
-          in: "path"
-          description: "Pet id to delete"
-          required: true
-          type: "integer"
-          format: "int64"
-      responses:
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "Pet not found"
-  /pet/{petId}/uploadImage:
-    post:
-      tags:
-        - "pet"
-      summary: "uploads an image"
-      description: ""
-      operationId: "uploadFile"
-      consumes:
-        - "multipart/form-data"
-      produces:
-        - "application/json"
-      parameters:
-        - name: "petId"
-          in: "path"
-          description: "ID of pet to update"
-          required: true
-          type: "integer"
-          format: "int64"
-        - name: "additionalMetadata"
-          in: "formData"
-          description: "Additional data to pass to server"
-          required: false
-          type: "string"
-        - name: "file"
-          in: "formData"
-          description: "file to upload"
-          required: false
-          type: "file"
-      responses:
-        200:
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/ApiResponse"
-  /store/inventory:
-    get:
-      tags:
-        - "store"
-      summary: "Returns pet inventories by status"
-      description: "Returns a map of status codes to quantities"
-      operationId: "getInventory"
-      produces:
-        - "application/json"
-      parameters: []
-      responses:
-        200:
-          description: "successful operation"
-          schema:
-            type: "object"
-            additionalProperties:
-              type: "integer"
-              format: "int32"
-  /store/order:
-    post:
-      tags:
-        - "store"
-      summary: "Place an order for a pet"
-      description: ""
-      operationId: "placeOrder"
-      produces:
-        - "application/xml"
-        - "application/json"
-      parameters:
-        - in: "body"
-          name: "body"
-          description: "order placed for purchasing the pet"
-          required: true
-          schema:
-            $ref: "#/definitions/Order"
-      responses:
-        200:
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/Order"
-        400:
-          description: "Invalid Order"
-  /store/order/{orderId}:
-    get:
-      tags:
-        - "store"
-      summary: "Find purchase order by ID"
-      description: "For valid response try integer IDs with value >= 1 and <= 10.         Other values will generated exceptions"
-      operationId: "getOrderById"
-      produces:
-        - "application/xml"
-        - "application/json"
-      parameters:
-        - name: "orderId"
-          in: "path"
-          description: "ID of pet that needs to be fetched"
-          required: true
-          type: "integer"
-          maximum: 10.0
-          minimum: 1.0
-          format: "int64"
-      responses:
-        200:
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/Order"
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "Order not found"
-    delete:
-      tags:
-        - "store"
-      summary: "Delete purchase order by ID"
-      description: "For valid response try integer IDs with positive integer value.         Negative or non-integer values will generate API errors"
-      operationId: "deleteOrder"
-      produces:
-        - "application/xml"
-        - "application/json"
-      parameters:
-        - name: "orderId"
-          in: "path"
-          description: "ID of the order that needs to be deleted"
-          required: true
-          type: "integer"
-          minimum: 1.0
-          format: "int64"
-      responses:
-        400:
-          description: "Invalid ID supplied"
-        404:
-          description: "Order not found"
-  /user:
-    post:
-      tags:
-        - "user"
-      summary: "Create user"
+        - "benutzer"
+      summary: "Benutzer anlegen"
       description: "This can only be done by the logged in user."
-      operationId: "createUser"
+      operationId: "benutzerAnlegen"
       produces:
-        - "application/xml"
         - "application/json"
       parameters:
         - in: "body"
-          name: "body"
+          name: "benutzer"
           description: "Created user object"
           required: true
           schema:
-            $ref: "#/definitions/User"
+            $ref: "#/definitions/Benutzer"
       responses:
-        default:
-          description: "successful operation"
-  /user/createWithArray:
-    post:
-      tags:
-        - "user"
-      summary: "Creates list of users with given input array"
-      description: ""
-      operationId: "createUsersWithArrayInput"
-      produces:
-        - "application/xml"
-        - "application/json"
-      parameters:
-        - in: "body"
-          name: "body"
-          description: "List of user object"
-          required: true
+        200:
+          description: "erfolgreich"
           schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/User"
-      responses:
-        default:
-          description: "successful operation"
-  /user/createWithList:
-    post:
-      tags:
-        - "user"
-      summary: "Creates list of users with given input array"
-      description: ""
-      operationId: "createUsersWithListInput"
-      produces:
-        - "application/xml"
-        - "application/json"
-      parameters:
-        - in: "body"
-          name: "body"
-          description: "List of user object"
-          required: true
-          schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/User"
-      responses:
-        default:
-          description: "successful operation"
-  /user/login:
+            type: "string"
+  /benutzer/login:
     get:
       tags:
-        - "user"
+        - "benutzer"
       summary: "Logs user into the system"
       description: ""
-      operationId: "loginUser"
+      operationId: "benutzerAnmelden"
       produces:
-        - "application/xml"
         - "application/json"
       parameters:
-        - name: "username"
+        - name: "benutzername"
           in: "query"
-          description: "The user name for login"
+          description: "Der Benutzername des einzuloggenden Benutzers"
           required: true
           type: "string"
-        - name: "password"
+        - name: "passwort"
           in: "query"
-          description: "The password for login in clear text"
+          description: "Das Passwort des einzuloggenden Benutzers in Klartext?"
           required: true
           type: "string"
       responses:
         200:
-          description: "successful operation"
+          description: "erfolgreich"
           schema:
             type: "string"
           headers:
@@ -434,57 +70,54 @@ paths:
               format: "date-time"
               description: "date in UTC when token expires"
         400:
-          description: "Invalid username/password supplied"
-  /user/logout:
+          description: "Ungültige Benutzerdaten"
+  /benutzer/logout:
     get:
       tags:
-        - "user"
-      summary: "Logs out current logged in user session"
+        - "benutzer"
+      summary: "Meldet den aktuellen Benutzer ab"
       description: ""
-      operationId: "logoutUser"
+      operationId: "benutzerAbmelden"
       produces:
-        - "application/xml"
         - "application/json"
       parameters: []
       responses:
         default:
-          description: "successful operation"
-  /user/{username}:
+          description: "erfolgreich"
+  /benutzer/{benutzername}:
     get:
       tags:
-        - "user"
-      summary: "Get user by user name"
+        - "benutzername"
+      summary: "Benutzerdaten zu Benutzernamen laden"
       description: ""
-      operationId: "getUserByName"
+      operationId: "benutzerdatenAusgeben"
       produces:
-        - "application/xml"
         - "application/json"
       parameters:
-        - name: "username"
+        - name: "benutzername"
           in: "path"
           description: "The name that needs to be fetched. Use user1 for testing. "
           required: true
           type: "string"
       responses:
         200:
-          description: "successful operation"
+          description: "erfolgreich"
           schema:
-            $ref: "#/definitions/User"
+            $ref: "#/definitions/Benutzer"
         400:
           description: "Invalid username supplied"
         404:
           description: "User not found"
     put:
       tags:
-        - "user"
-      summary: "Updated user"
+        - "benutzer"
+      summary: "Benutzerdaten aktualisieren"
       description: "This can only be done by the logged in user."
-      operationId: "updateUser"
+      operationId: "benutzerdatenAktualisieren"
       produces:
-        - "application/xml"
         - "application/json"
       parameters:
-        - name: "username"
+        - name: "benutzername"
           in: "path"
           description: "name that need to be updated"
           required: true
@@ -494,7 +127,7 @@ paths:
           description: "Updated user object"
           required: true
           schema:
-            $ref: "#/definitions/User"
+            $ref: "#/definitions/Benutzer"
       responses:
         400:
           description: "Invalid user supplied"
@@ -502,15 +135,14 @@ paths:
           description: "User not found"
     delete:
       tags:
-        - "user"
-      summary: "Delete user"
+        - "benutzer"
+      summary: "Benutzer löschen"
       description: "This can only be done by the logged in user."
-      operationId: "deleteUser"
+      operationId: "benutzerdatenLoeschen"
       produces:
-        - "application/xml"
         - "application/json"
       parameters:
-        - name: "username"
+        - name: "benutzername"
           in: "path"
           description: "The name that needs to be deleted"
           required: true
@@ -521,114 +153,26 @@ paths:
         404:
           description: "User not found"
 definitions:
-  Order:
+  Benutzer:
     type: "object"
+    required:
+      - "benutzername"
+      - "vorname"
+      - "nachname"
+      - "email"
     properties:
-      id:
-        type: "integer"
-        format: "int64"
-      petId:
-        type: "integer"
-        format: "int64"
-      quantity:
-        type: "integer"
-        format: "int32"
-      shipDate:
+      benutzername:
         type: "string"
-        format: "date-time"
-      status:
+      vorname:
         type: "string"
-        description: "Order Status"
-        enum:
-          - "placed"
-          - "approved"
-          - "delivered"
-      complete:
-        type: "boolean"
-        default: false
-    xml:
-      name: "Order"
-  Category:
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      name:
-        type: "string"
-    xml:
-      name: "Category"
-  User:
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      username:
-        type: "string"
-      firstName:
-        type: "string"
-      lastName:
+      nachname:
         type: "string"
       email:
         type: "string"
-      password:
-        type: "string"
-      phone:
-        type: "string"
-      userStatus:
-        type: "integer"
-        format: "int32"
-        description: "User Status"
-    xml:
-      name: "User"
-  Tag:
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      name:
+      passwort:
         type: "string"
     xml:
-      name: "Tag"
-  Pet:
-    type: "object"
-    required:
-      - "name"
-      - "photoUrls"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      category:
-        $ref: "#/definitions/Category"
-      name:
-        type: "string"
-        example: "doggie"
-      photoUrls:
-        type: "array"
-        xml:
-          name: "photoUrl"
-          wrapped: true
-        items:
-          type: "string"
-      tags:
-        type: "array"
-        xml:
-          name: "tag"
-          wrapped: true
-        items:
-          $ref: "#/definitions/Tag"
-      status:
-        type: "string"
-        description: "pet status in the store"
-        enum:
-          - "available"
-          - "pending"
-          - "sold"
-    xml:
-      name: "Pet"
+      name: "Mitarbeiter"
   ApiResponse:
     type: "object"
     properties:
@@ -639,6 +183,3 @@ definitions:
         type: "string"
       message:
         type: "string"
-externalDocs:
-  description: "Find out more about Swagger"
-  url: "http://swagger.io"
